kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-app-svc
  namespace: production
  labels:
    app.kubernetes.io/name: production-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: production-app
